--- a/src/components/cart/cart.styles.scss
+++ b/src/components/cart/cart.styles.scss
@@ -1,41 +1,46 @@
-.modal{
-    // display: none; /* Hidden by default */
-    // position: fixed; /* Stay in place */
-    // z-index: 1; /* Sit on top */
-    // padding-top: 100px; /* Location of the box */
-    // left: 0;
-    // top: 0;
-    // width: 100%; /* Full width */
-    // height: 100%; /* Full height */
-    // margin-top: 100px;
-    // overflow: auto; /* Enable scroll if needed */
-    // background-color: rgb(0,0,0); /* Fallback color */
-    // background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+.cart-icon{
+    font-weight: 400;
+    font-size: 1.8rem;
+    margin-right: 2.5rem;
+    letter-spacing: 2px;    
+    cursor: pointer;
+    position: relative;
 
+    .cart-icon__product-quantity{
+        background-color: black;
+        border-radius: 50%;
+        color: #ffffff;
+        text-align: center;
+        position: absolute;
+        padding: 5px 5px;
+        bottom: 3rem;
+        left: 1rem;
+    }
+
+}
+
+.modal-background-overlay{
     display: block;
-    width: 100%;
-    height: 100%;
-    margin-top: 100px;
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4); 
+    margin-top: 9.5rem;
 }
 
 .cart{
     z-index: 100;
-    width: 325px;
+    width: 32rem;
     height: fit-content;
-    // border: 1px solid black;
     padding: 1rem 1rem;
-    // position: absolute;
     margin-top: 2rem;
-    // left: 57%;
     background-color: #ffffff;
     margin-left: auto;
     margin-right: 10%;
     margin-top: 0rem;
+    overflow: scroll;
  
     .cart__header{
         margin-bottom: 1rem;
@@ -47,7 +52,12 @@
         }
     }
 
-    .cart__product-details{
+    .cart__items{
+        overflow: scroll;
+        height: 45rem;
+
+         
+    .cart__product-detail{
         display: flex;
         height: 20rem;
         margin-bottom: 3.5rem;
@@ -57,11 +67,16 @@
         }
     }
     
+
     .cart__product-specifications{
         margin-right: 2rem;
         font-weight: 400;
         font-size: 1.5rem;
         
+        .cart__label{
+            font-size: 1.4rem;
+            margin-bottom: 1rem;
+        }
         & > *{
             margin-bottom: 1.5rem;
         }
@@ -137,8 +152,6 @@
     
     .cart__color-swatch{
         display: flex;
-        height: 20px;
-        
         
         &__color{
             background-color: #0F6450;
@@ -152,7 +165,7 @@
     .cart__product-image{
 
     }
-
+}
 
     .cart__footer{
         .cart__total{
@@ -169,11 +182,11 @@
                 font-weight: bold;
             }
         }
-       
 
         .cart__button-position{
-            justify-content: space-between;
             display: flex;
+            justify-content: space-between;
+            margin: 1rem 0;
             & > button:not(:last-child){
                 margin-right: 1rem;
             }
@@ -181,7 +194,7 @@
                 cursor: pointer;
                 background-color: white;
                 text-align: center;
-                padding: 8px 2rem;
+                padding: 1.25rem 2rem;
                 border: .5px solid black;
                 font-size: 1rem;
                 width: 14rem;
@@ -193,7 +206,7 @@
                 color: white;
                 background-color: #5ECE7B;
                 text-align: center;
-                padding: 8px 2rem;
+                padding: 1.25rem 2rem;
                 border: none;
                 font-size: 1rem;
             }
